--- a/app/views/activejob/web/job_executions/show.html.erb
+++ b/app/views/activejob/web/job_executions/show.html.erb
@@ -52,22 +52,27 @@
           <div class="col-md-8 mt-1">
             <div class="d-flex" style="float: right">
               <% if @job_execution.approved? %>
-                <%= button_to 'Run Job Execution', execute_activejob_web_job_job_execution_path(@job, @job_execution), method: :get, onclick: "return confirm('Are you sure you want to run this job execution?');", class: 'btn btn-outline-success', style: 'margin-right: 5px' %>
+                <%= link_to 'Run Job Execution', execute_activejob_web_job_job_execution_path(@job, @job_execution), method: :get, onclick: "return confirm('Are you sure you want to run this job execution?');", class: 'btn btn-outline-success', style: 'margin-right: 5px' %>
               <% end %>
               <% if @job_execution.cancel_execution %>
-                <%= button_to 'Cancel Job Execution', cancel_activejob_web_job_job_execution_path(@job, @job_execution), method: :patch, onclick: "return confirm('Are you sure you want to cancel this job execution?');", class: 'btn btn-outline-danger mr-2', style: 'margin-right: 5px' %>
+                <%= link_to 'Cancel Job Execution', cancel_activejob_web_job_job_execution_path(@job, @job_execution), method: :patch, onclick: "return confirm('Are you sure you want to cancel this job execution?');", class: 'btn btn-outline-danger mr-2', style: 'margin-right: 5px' %>
               <% end %>
               <% if @job_execution.cancelled? %>
-                <%= button_to 'Reinitiate Job Execution',reinitiate_activejob_web_job_job_execution_path(@job, @job_execution), method: :post, onclick: "return confirm('Are you sure you want to reinitiate this job execution?');", class: 'btn btn-outline-primary mr-2'  %>
+                <%= link_to 'Reinitiate Job Execution',reinitiate_activejob_web_job_job_execution_path(@job, @job_execution), method: :post, onclick: "return confirm('Are you sure you want to reinitiate this job execution?');", class: 'btn btn-outline-primary mr-2'  %>
               <% end %>
-              <% if @job_execution.execution_started_at.present? %>
-                <%= button_to 'Logs',logs_activejob_web_job_job_execution_path(@job, @job_execution), method: :get, class: 'btn btn-outline-info'  %>
+              <% if @execution_history_count > 1 %>
+                <%= link_to 'History', history_activejob_web_job_job_execution_path(@job, @job_execution), method: :get, class: 'btn btn-outline-info'  %>
               <% end %>
             </div>
           </div>
         </div>
       </div>
       <div class="card-body p-3">
+        <div class="mb-3 row">
+          <div class="col-sm-3"><strong class="text-dark">Total Executions:</strong></div>
+          <div class="col-sm-9"><%= @execution_history_count %></div>
+        </div>
+        <hr>
         <div class="mb-3 row">
           <div class="col-sm-3"><strong class="text-dark">Status:</strong></div>
           <div class="col-sm-9"><span class="badge text-bg-<%= status_badge(@job_execution.status) %>"><%= @job_execution.status %></span></div>
