--- a/app/views/activejob/web/job_executions/_execution_history.html.erb
+++ b/app/views/activejob/web/job_executions/_execution_history.html.erb
@@ -3,13 +3,13 @@
     <div class="card h-100">
       <div class="card-header pb-0 p-3">
         <div class="row">
-          <div class="col-md-4 d-flex align-items-center">
-            <h3 class="mb-3">Job Execution Details</h3>
+          <div class="col-md-8 d-flex align-items-center">
+            <h6 class="mb-3"><%= history.log_stream_name %></h6>
           </div>
-          <div class="col-md-8 mt-1">
+          <div class="col-md-4 mt-1">
             <div class="d-flex" style="float: right">
               <% if details['execution_started_at'].present? %>
-                <%= link_to 'Logs',logs_activejob_web_job_job_execution_path(@job, @job_execution), method: :get, class: 'btn btn-outline-info'  %>
+                <%= link_to 'Logs',logs_activejob_web_job_job_execution_path(@job, @job_execution, history_id: history.id), method: :get, class: 'btn btn-outline-info'  %>
               <% end %>
             </div>
           </div>
