--- a/app/views/activejob/web/job_executions/history.html.erb
+++ b/app/views/activejob/web/job_executions/history.html.erb
@@ -1,3 +1,24 @@
-<% @job_execution_histories.each do |history|  %>
-  <%= render partial: 'execution_history', locals: { history:, details: history.details, arguments: history.arguments } %>
-<% end %>
+<div class="row mt-3 p-3">
+  <div class="col-12 col-md-12 col-xl-12 mt-md-0 mt-4">
+    <div class="card h-100">
+      <div class="card-header pb-0 p-3">
+        <div class="row">
+          <div class="col-md-8 d-flex align-items-center">
+            <h3 class="mb-3">Job Execution Histories</h3>
+          </div>
+          <div class="col-md-4 mt-1">
+            <div class="d-flex" style="float: right">
+              <%= link_to 'Back', activejob_web_job_job_execution_path(@job, @job_execution), class: 'btn btn-outline-secondary' %>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="card-body p-3">
+        <% @job_execution_histories.each do |history|  %>
+          <%= render partial: 'execution_history', locals: { history:, details: history.details, arguments: history.arguments } %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
+
