--- a/app/views/activejob/web/job_executions/logs.html.erb
+++ b/app/views/activejob/web/job_executions/logs.html.erb
@@ -4,15 +4,16 @@
       <div class="card-header pb-0 p-3">
         <div class="row">
           <div class="col-md-8 d-flex align-items-center">
-            <h3 class="mb-3">Job Execution Logs</h3>
+            <h3 class="mb-3">Job Execution Logs : <%= @job_execution_history.log_stream_name %></h3>
           </div>
           <div class="col-md-4 text-end mt-1">
-            <%= link_to 'Back', activejob_web_job_job_execution_path(@job, @job_execution), class: 'btn btn-outline-secondary' %>
+            <%= link_to 'Back', history_activejob_web_job_job_execution_path(@job, @job_execution), class: 'btn btn-outline-secondary' %>
           </div>
         </div>
       </div>
       <div class="card-body p-3">
         <%= render partial: 'execution_log', locals: {
+          job: @job,
           job_execution: @job_execution,
           execution_history: @job_execution_history,
           details: @job_execution_history.details,
