--- a/app/views/activejob/web/job_executions/_execution_log.html.erb
+++ b/app/views/activejob/web/job_executions/_execution_log.html.erb
@@ -5,6 +5,7 @@
         color: #fff;
         white-space: pre-wrap;
         font-size: 10px;
+        border-radius: 10px;
     }
 </style>
 <div class="mb-3 row terminal p-3">
