--- a/app/views/activejob/web/job_executions/show.html.erb
+++ b/app/views/activejob/web/job_executions/show.html.erb
@@ -1,3 +1,14 @@
+<style>
+    .terminal {
+        font-family: monospace;
+        background-color: #000;
+        color: #fff;
+        white-space: pre-wrap;
+        font-size: 10px;
+        border-radius: 10px;
+    }
+</style>
+
 <div class="row mt-3 p-3">
   <div class="col-12 col-md-12 col-xl-12 mt-md-0 mt-4">
     <div class="card h-100">
@@ -52,15 +63,15 @@
           <div class="col-md-8 mt-1">
             <div class="d-flex" style="float: right">
               <% if @job_execution.approved? %>
-                <%= button_to 'Run Job Execution', execute_activejob_web_job_job_execution_path(@job, @job_execution), method: :get, onclick: "return confirm('Are you sure you want to run this job execution?');", class: 'btn btn-outline-success', style: 'margin-right: 5px' %>
+                <%= link_to 'Run Job Execution', execute_activejob_web_job_job_execution_path(@job, @job_execution), method: :get, onclick: "return confirm('Are you sure you want to run this job execution?');", class: 'btn btn-outline-success', style: 'margin-right: 5px' %>
               <% end %>
               <% if @job_execution.cancel_execution %>
-                <%= button_to 'Cancel Job Execution', cancel_activejob_web_job_job_execution_path(@job, @job_execution), method: :patch, onclick: "return confirm('Are you sure you want to cancel this job execution?');", class: 'btn btn-outline-danger mr-2', style: 'margin-right: 5px' %>
+                <%= link_to 'Cancel Job Execution', cancel_activejob_web_job_job_execution_path(@job, @job_execution), method: :patch, onclick: "return confirm('Are you sure you want to cancel this job execution?');", class: 'btn btn-outline-danger mr-2', style: 'margin-right: 5px' %>
               <% end %>
               <% if @job_execution.cancelled? %>
-                <%= button_to 'Reinitiate Job Execution',reinitiate_activejob_web_job_job_execution_path(@job, @job_execution), method: :post, onclick: "return confirm('Are you sure you want to reinitiate this job execution?');", class: 'btn btn-outline-primary mr-2'  %>
+                <%= link_to 'Reinitiate Job Execution',reinitiate_activejob_web_job_job_execution_path(@job, @job_execution), method: :post, onclick: "return confirm('Are you sure you want to reinitiate this job execution?');", class: 'btn btn-outline-primary mr-2'  %>
               <% end %>
-              <% if @execution_history_count > 1 %>
+              <% if @job_execution_histories.count > 1 %>
                 <%= link_to 'History', history_activejob_web_job_job_execution_path(@job, @job_execution), method: :get, class: 'btn btn-outline-info'  %>
               <% end %>
             </div>
@@ -70,8 +81,14 @@
       <div class="card-body p-3">
         <div class="mb-3 row">
           <div class="col-sm-3"><strong class="text-dark">Total Executions:</strong></div>
-          <div class="col-sm-9"><%= @execution_history_count %></div>
+          <div class="col-sm-9"><%= @job_execution_histories.count %></div>
         </div>
+        <% if @job_execution.executed? %>
+          <div class="mb-3 row">
+            <div class="col-sm-3"><strong class="text-dark">Live Logs:</strong></div>
+            <div class="col-sm-9 terminal p-3" id="live-logs-terminal"><div id="live-logs-hint">The job execution is currently in progress, and log events are streaming from <%= @job_execution.current_execution_history.log_stream_name %> ...</div></div>
+          </div>
+        <% end %>
         <hr>
         <div class="mb-3 row">
           <div class="col-sm-3"><strong class="text-dark">Status:</strong></div>
@@ -152,4 +169,41 @@
     </div>
   </div>
 </div>
+<script>
+    $(document).ready(function() {
+        <% if @job_execution.executed? %>
+        makeAjaxCall()
+        <% end %>
+    });
+
+    function makeAjaxCall(timestamp, ingestion) {
+        $.ajax({
+            url: '<%= live_logs_activejob_web_job_job_execution_path(@job, @job_execution) %>',
+            method: 'GET',
+            data: {
+                history_id: '<%= @job_execution.current_execution_history.id %>',
+                event_timestamp: timestamp,
+                event_ingestion: ingestion
+            },
+            success: function(response) {
+                if (response.terminated === true) {
+                    return;
+                } else {
+                    if (response.messages[0]){
+                        $('#live-logs-hint').remove();
+                        $.each(response.messages, function(index, value) {
+                            $('#live-logs-terminal').append('<div>' + value + '</div>');
+                        });
+                    }
+                    setTimeout(function() {
+                        makeAjaxCall(response.event_timestamp, response.event_ingestion);
+                    }, 1000);
+                }
+            },
+            error: function(xhr, status, error) {
+                console.error('AJAX error:', error);
+            }
+        });
+    }
+</script>
 
