--- a/app/views/activejob/web/layouts/application.html.erb
+++ b/app/views/activejob/web/layouts/application.html.erb
@@ -6,6 +6,16 @@
   <title>Activejob Web</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <style>
+      .terminal {
+          font-family: monospace;
+          background-color: #000;
+          color: #fff;
+          white-space: pre-wrap;
+          font-size: 10px;
+          border-radius: 10px;
+      }
+  </style>
 </head>
 <body>
 <%= render 'activejob/web/shared/navbar' %>
