UI and Execution History Attachment changes

--- a/app/views/activejob/web/job_approval_requests/show.html.erb
+++ b/app/views/activejob/web/job_approval_requests/show.html.erb
@@ -2,14 +2,14 @@
   <div class="row mt-3 p-3">
     <div class="col-12 col-md-12 col-xl-12 mt-md-0 mt-4">
       <div class="card h-100">
-        <div class="card-header pb-0 p-3">
+        <div class="card-header p-2">
           <div class="row">
             <div class="col-md-8 d-flex align-items-center">
-              <h3 class="mb-3">Job Execution Details</h3>
+              <h5 class="mb-0">Job Execution Details</h5>
             </div>
-            <div class="col-md-4 text-end mt-1">
-              <%= link_to 'Back', activejob_web_job_job_approval_requests_path(@job), class: 'btn btn-outline-secondary' %>
-              <%= form.submit 'submit', class: 'btn btn-outline-success' %>
+            <div class="col-md-4 text-end">
+              <%= link_to 'Back', activejob_web_job_job_approval_requests_path(@job), class: 'btn btn-sm btn-outline-secondary' %>
+              <%= form.submit 'submit', class: 'btn btn-sm btn-outline-success' %>
             </div>
           </div>
         </div>
@@ -50,7 +50,7 @@
                 <div class="card">
                   <div class="card-body">
                     <div class="table-responsive">
-                      <table class="table table-centered table-nowrap table-hover mb-0">
+                      <table class="table table-centered table-nowrap table-hover mb-0 table-sm">
                         <thead>
                         <tr>
                           <th>Key</th>
