--- a/app/views/activejob/web/job_approval_requests/index.html.erb
+++ b/app/views/activejob/web/job_approval_requests/index.html.erb
@@ -1,19 +1,19 @@
 <div class="row mt-3 p-3">
   <div class="col-12 col-md-12 col-xl-12 mt-md-0 mt-4">
     <div class="card h-100">
-      <div class="card-header pb-0 p-3">
+      <div class="card-header p-2">
         <div class="row">
           <div class="col-md-8 d-flex align-items-center">
-            <h3 class="mb-3">Job Approval Request</h3>
+            <h5 class="mb-0">Job Approval Request</h5>
           </div>
           <div class="col-md-4 text-end mt-1">
-            <%= link_to 'Back', activejob_web_job_path(@job), class: 'btn btn-outline-secondary' %>
+            <%= link_to 'Back', activejob_web_job_path(@job), class: 'btn btn-sm btn-outline-secondary' %>
           </div>
         </div>
       </div>
       <div class="card-body p-3">
         <% if @job_approval_requests.present? %>
-          <table class="table">
+          <table class="table table-sm">
             <tr>
               <th scope="col">Title</th>
               <th scope="col">Requestor Email</th>
@@ -32,13 +32,13 @@
                   </span>
                 </td>
                 <td>
-                  <%= link_to 'Show', activejob_web_job_job_approval_request_path(@job, approval_request), class: 'btn btn-outline-primary' %>
+                  <%= link_to 'Show', activejob_web_job_job_approval_request_path(@job, approval_request), class: 'btn btn-sm btn-outline-primary' %>
                 </td>
               </tr>
             <% end %>
           </table>
         <% else %>
-          <h6>No Job Approval Request Found!!!</h6>
+          <hp>No Job Approval Request Found!</hp>
         <% end %>
       </div>
     </div>
