--- a/app/views/activejob/web/job_executions/_job_execution_form.html.erb
+++ b/app/views/activejob/web/job_executions/_job_execution_form.html.erb
@@ -1,15 +1,15 @@
 <%= form_for [@job, @job_execution] ,url: url do |form| %>
-  <div class="row mt-3 p-3">
+  <div class="row p-3 <%= 'mt-3' if action_title == 'Edit' %>">
     <div class="col-12 col-md-12 col-xl-12 mt-md-0 mt-4">
       <div class="card h-100">
-        <div class="card-header pb-0 p-3">
+        <div class="card-header p-2">
           <div class="row">
-            <div class="col-md-4 d-flex align-items-center">
-              <h3 class="mb-3"><%= action_title %> Job Execution <%= ": #{@job_execution.requestor_comments}" if action_title == 'Edit' %></h3>
+            <div class="col-md-8 d-flex align-items-center">
+              <h5 class="mb-0"><%= action_title %> Job Execution <%= ": #{@job_execution.requestor_comments}" if action_title == 'Edit' %></h5>
             </div>
-            <div class="col-md-8 text-end mt-1">
-              <%= link_to 'Back', activejob_web_job_path(@job), class: 'btn btn-outline-secondary' %>
-              <%= form.submit 'Submit', class: 'btn btn-outline-success' %>
+            <div class="col-md-4 text-end">
+              <%= link_to 'Back', activejob_web_job_job_executions_path(@job), class: 'btn btn-sm btn-outline-secondary' %>
+              <%= form.submit 'Submit', class: 'btn btn-sm btn-outline-success' %>
             </div>
           </div>
         </div>
@@ -58,7 +58,7 @@
               <% @job.input_arguments.each do |argument| %>
                 <% argument_name = argument["name"].downcase.gsub(/\s+/, '_') %>
                 <div class="mb-3 row">
-                  <%= form.label argument_name, class: 'col-sm-2 col-form-label' %>
+                  <%= form.label argument_name.split('_').map(&:capitalize).join(' '), class: 'col-sm-2 col-form-label' %>
                   <div class="col-sm-5 mt-2">
                     <% case argument["type"] %>
                     <% when "File" %>
