--- a/app/views/activejob/web/job_executions/history.html.erb
+++ b/app/views/activejob/web/job_executions/history.html.erb
@@ -1,19 +1,19 @@
 <div class="row mt-3 p-3">
   <div class="col-12 col-md-12 col-xl-12 mt-md-0 mt-4">
     <div class="card h-100">
-      <div class="card-header pb-0 p-3">
+      <div class="card-header p-2">
         <div class="row">
           <div class="col-md-8 d-flex align-items-center">
-            <h3 class="mb-3">Job Execution Histories</h3>
+            <h5 class="mb-0">Job Execution Histories</h5>
           </div>
           <div class="col-md-4 mt-1">
             <div class="d-flex" style="float: right">
-              <%= link_to 'Back', activejob_web_job_job_execution_path(@job, @job_execution), class: 'btn btn-outline-secondary' %>
+              <%= link_to 'Back', activejob_web_job_job_execution_path(@job, @job_execution), class: 'btn btn-sm btn-outline-secondary' %>
             </div>
           </div>
         </div>
       </div>
-      <div class="card-body p-3">
+      <div class="card-body">
         <% @job_execution_histories.each do |history|  %>
           <%= render partial: 'execution_history', locals: { history:, details: history.details, arguments: history.arguments } %>
         <% end %>
