--- a/app/views/activejob/web/job_executions/index.html.erb
+++ b/app/views/activejob/web/job_executions/index.html.erb
@@ -1,16 +1,16 @@
 <div class="row mt-3 p-3">
   <div class="col-12 col-md-12 col-xl-12 mt-md-0 mt-4">
     <div class="card h-100">
-      <div class="card-header pb-0 p-3">
+      <div class="card-header p-2">
         <div class="row">
           <div class="col-md-4 d-flex align-items-center">
-            <h3 class="mb-3">Job Executions</h3>
+            <h5 class="mb-0">Job Executions</h5>
           </div>
         </div>
       </div>
       <div class="card-body p-3">
         <% if @job_executions.present? %>
-          <table class="table">
+          <table class="table table-sm">
             <tr>
               <th scope="col">Comments</th>
               <th scope="col">Status</th>
@@ -30,14 +30,14 @@
                 <td><%= rejected_count %></td>
                 <td><%= total_count - approved_count - rejected_count %></td>
                 <td>
-                  <%= link_to 'Edit', edit_activejob_web_job_job_execution_path(@job,job_execution), class: 'btn btn-outline-primary' %>
-                  <%= link_to 'Show', activejob_web_job_job_execution_path(@job,job_execution), class: 'btn btn-outline-primary' %>
+                  <%= link_to 'Edit', edit_activejob_web_job_job_execution_path(@job,job_execution), class: 'btn btn-sm btn-outline-primary' %>
+                  <%= link_to 'Show', activejob_web_job_job_execution_path(@job,job_execution), class: 'btn btn-sm btn-outline-primary' %>
                 </td>
               </tr>
             <% end %>
           </table>
         <% else %>
-          <h6>No Job Execution Found!!!</h6>
+          <p>No Job Execution Found!</p>
         <% end %>
       </div>
     </div>
