--- a/app/views/activejob/web/jobs/_common_index.html.erb
+++ b/app/views/activejob/web/jobs/_common_index.html.erb
@@ -1,16 +1,16 @@
-<div class="row mt-3 p-3">
+<div class="row p-3">
   <div class="col-12 col-md-12 col-xl-12 mt-md-0 mt-4">
     <div class="card h-100">
-      <div class="card-header pb-0 p-3">
+      <div class="card-header p-3">
         <div class="row">
           <div class="col-md-8 d-flex align-items-center">
-            <h3 class="mb-3"><%= title %></h3>
+            <h5 class="mb-0"><%= title %></h5>
           </div>
         </div>
       </div>
       <div class="card-body">
         <% if jobs.present? %>
-          <table class="table">
+          <table class="table table-sm">
             <thead>
             <tr>
               <th scope="col">Title</th>
@@ -27,13 +27,13 @@
                 <td><%= job.description %></td>
                 <td><%= job.id %></td>
                 <td><%= job.queue %></td>
-                <td><%= link_to 'Show', activejob_web_job_path(job), class: 'btn btn-outline-primary' %></td>
+                <td><%= link_to 'Show', activejob_web_job_path(job), class: 'btn btn-sm btn-outline-primary' %></td>
               </tr>
             <% end %>
             </tbody>
           </table>
         <% else %>
-          <p> No jobs available.</p>
+          <p> No jobs available!</p>
         <% end %>
       </div>
     </div>
