--- a/app/views/activejob/web/layouts/application.html.erb
+++ b/app/views/activejob/web/layouts/application.html.erb
@@ -7,20 +7,31 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <style>
-      .terminal {
-          font-family: monospace;
-          background-color: #000;
-          color: #fff;
-          white-space: pre-wrap;
-          font-size: 10px;
-          border-radius: 10px;
+      .activejob-web-container {
+          font-size: 14px;
+
+          .terminal {
+              font-family: monospace;
+              background-color: #000;
+              color: #fff;
+              white-space: pre-wrap;
+              font-size: 10px;
+              border-radius: 10px;
+          }
+
+          .form-select {
+              font-size: 14px;
+          }
+
       }
   </style>
 </head>
 <body>
-<%= render 'activejob/web/shared/navbar' %>
-<%= render 'activejob/web/shared/flash' %>
-<%= yield %>
+<div class="activejob-web-container">
+  <%= render 'activejob/web/shared/navbar' %>
+  <%= render 'activejob/web/shared/flash' %>
+  <%= yield %>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
