--- a/app/views/activejob/web/job_approval_requests/index.html.erb
+++ b/app/views/activejob/web/job_approval_requests/index.html.erb
@@ -19,6 +19,10 @@
               <th scope="col">Requestor Email</th>
               <th scope="col">Requestor Comment</th>
               <th scope="col">Status</th>
+              <% if admin? %>
+                <th scope="col">Approver Name </th>
+                <th scope="col">Approver Email </th>
+              <% end %>
               <th scope="col">Actions</th>
             </tr>
             <% @job_approval_requests.each do |approval_request| %>
@@ -31,6 +35,10 @@
                   <%= approval_request.response.nil? ? 'waiting for approval' : approval_request.response %>
                   </span>
                 </td>
+                <% if admin? %>
+                  <td><%= approval_request.approver&.name || '-' %></td>
+                  <td><%= approval_request.approver.email %></td>
+                <% end %>
                 <td>
                   <%= link_to 'Show', activejob_web_job_job_approval_request_path(@job, approval_request), class: 'btn btn-sm btn-outline-primary' %>
                 </td>
